# djangoapitest

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.md  manage.py  pyproject.toml
TestProject/WindTest/: main.py
TestProject/WindTest/Revenue/: revenue.py
TestProject/WindTest/financial/: balancesheet.py
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py
postman/: WindAapp.postman_collection.json
templates/: home.html
utils/: uuid_helper.py
wind_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
wind_test/: main.py
wind_test/financial/: balancesheet.py
wind_test/operationcost/: costcalc.py
